--- a/ng-frontend/src/app/features/search-bar/search-bar.html
+++ b/ng-frontend/src/app/features/search-bar/search-bar.html
@@ -1,38 +1,16 @@
-<!-- <div class="search-glass-wrapper shadow-sm">
-    <i class="bi bi-search ms-3 text-muted"></i>
-    <input  #searchInput
-        type="text" class="search-input" placeholder="Search stories, tech, and insights..."
-        (input)="onInput($event)">
-    <kbd class="me-3 kbd-badge d-none d-md-flex" style="">{{keyboardLabel}}</kbd>
-</div> -->
-<!-- <div class="search-glass-wrapper shadow-sm">
-    <i class="bi bi-search ms-3 text-muted"></i>
-    
-    <select class="search-mode-select ms-2" (change)="onModeChange($event)">
-        <option value="text">Text</option>
-        <option value="semantic">Semantic</option>
-    </select>
-    
-    <div class="vertical-divider mx-2"></div>
-
-    <input #searchInput
-        type="text" class="search-input" placeholder="Search stories, tech, and insights..."
-        (input)="onInput($event)">
-    <kbd class="me-3 kbd-badge d-none d-md-flex">{{keyboardLabel}}</kbd>
-</div> -->
 <div class="search-glass-wrapper shadow-sm">
-    <i class="bi bi-search ms-3 text-muted"></i>
-    
-    <input #searchInput
-        type="text" class="search-input" placeholder="Search stories, tech, and insights..."
+    <i class="bi bi-search text-muted search-icon"></i>
+
+    <input #searchInput type="text" class="search-input" placeholder="Search stories, tech, and insights..."
         (input)="onInput($event)">
 
-    <div class="search-mode-container me-2">
+    <div class="search-mode-container">
         <select class="search-mode-select" (change)="onModeChange($event)">
             <option value="text">Text</option>
             <option value="semantic">Semantic</option>
         </select>
+        <i class="bi bi-chevron-down select-arrow"></i>
     </div>
 
-    <kbd class="me-3 kbd-badge d-none d-md-flex">{{keyboardLabel}}</kbd>
+    <kbd class="kbd-badge d-none d-md-flex">{{keyboardLabel}}</kbd>
 </div>
